# ml-agent-team

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
examples/: classification_example.py  regression_example.py
src/ml_agent_team/: __init__.py  __main__.py  cli.py
src/ml_agent_team/agents/: __init__.py  data_ingestion.py  diagnosis.py  eda.py  evaluation.py  feature_engineering.py  literature_review.py  model_building.py  model_selection.py  optimization.py  orchestrator.py  peer_review.py  problem_analysis.py  reporting.py  training.py
src/ml_agent_team/core/: __init__.py  artifacts.py  base_agent.py  config.py  exceptions.py  logging.py  message_bus.py  messages.py  pipeline.py  types.py  workflow_state.py
src/ml_agent_team/integrations/: __init__.py  llm.py
src/ml_agent_team/utils/: data_utils.py  io_utils.py  metric_utils.py  plot_utils.py  validation_utils.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/core/: test_config.py  test_message_bus.py  test_messages.py  test_pipeline.py  test_workflow_state.py
