[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-agent-team"
version = "0.1.0"
description = "A multi-agent system that handles full end-to-end ML workflows — from problem analysis to model deployment and reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Kyle Zeng" }]
keywords = ["machine-learning", "agents", "automation", "pipeline", "ml-ops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=23.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
llm = ["anthropic>=0.30", "openai>=1.0"]
xgboost = ["xgboost>=2.0"]
lightgbm = ["lightgbm>=4.0"]
optuna = ["optuna>=3.0"]
tracking = ["mlflow>=2.0"]
deep = ["torch>=2.0"]
all = ["ml-agent-team[llm,xgboost,lightgbm,optuna,tracking,deep]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.scripts]
ml-agent-team = "ml_agent_team.cli:app"

[project.urls]
Repository = "https://github.com/Kymi808/ml-agent-team"
Issues = "https://github.com/Kymi808/ml-agent-team/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_agent_team"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ml_agent_team"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
